FLUID-5520: Fix high-contrast for project boxes

--- a/src/documents/css/contrast.css.styl
+++ b/src/documents/css/contrast.css.styl
@@ -12,6 +12,16 @@ build-themes-extensions(contrastThemes) {
             background-color: bColor !important;
             box-shadow: none;
           }
+          .fluid-web-showcase-item {
+            background: none !important;
+            border: 1px solid fColor;
+          }
+          a:hover, a:focus {
+            outline: 0.2rem solid fColor !important;
+          }
+          .fluid-web-project-description h3, .fluid-web-project-description p {
+            outline: none !important;
+          }
         }
     }
 }
